--- a/index.html
+++ b/index.html
@@ -1,154 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=, initial-scale=1.0">
+  <title>Studio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
-     <!-- site header-->
-     <header>
-        <nav>
-          <!-- site logo-->
-          <a href="/">WebStudio</a>
-          <!-- links in site header -->
-          <ul>
-            <li><a href="">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href=""></a>Contacts</a></li>
-          </ul>
-        </nav>
-        <!-- contacts in header -->
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com" class="contact-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+11 (000) 111-11-11" class="contact-link">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </header>
-      <!-- background:banner/picture/video? -->
-      <main>
-        <div>
-          <section>
-            <h1>Effective Solutions
-                for Your Business</h1>
-            <button type="button">Order Service</button>
-          </section>
-        </div>
-  
-        <!-- company advantages -->
-        <section>
-          <ul>
-            <li>
-              <h3>Strategy</h3>
-              <p>
-                Our goal is to identify the business problem to walk away with the perfect and creative solution. 
-              </p>
-            </li>
-            <li>
-              <h3>Punctuality</h3>
-              <p>
-                Bring the key message to the brand's audience for the best price within the shortest possible time.
-              </p>
-            </li>
-            <li>
-              <h3>Diligence</h3>
-              <p>
-                Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li>
-              <h3>Technologies</h3>
-              <p>
-                Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-              </p>
-            </li>
-          </ul>
-        </section>
-        <!-- what does the company do -->
-        <section>
-          <h2>What are we doing</h2>
-          <ul>
-            <li>
-              <img
-                src="images/works-process1.jpg"
-                alt="close-up-image-programer-working-his-desk-office"
-                width="370"
-              />
-            </li>
-            <li>
-              <img
-                src="images/works-process2.jpg"
-                alt="web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones"
-                width="370"
-              />
-            </li>
-            <li>
-              <img
-                src="images/works-process3.jpg"
-                alt="creative-artist-web-design-with-working-colour-selection-graphic-tablet"
-                width="370"
-              />
-            </li>
-          </ul>
-        </section>
-  
-        <!-- our team -->
-        <div>
-          <section>
-            <h2>Our Team</h2>
-            <ul>
-              <li>
-                <a href="">
-                  <img
-                    src="images/foto1.jpg"
-                    alt="images Mark Guerrero"
-                    width="270"
-                  />
-                </a>
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
-              </li>
-              <li>
-                <a href="">
-                  <img
-                    src="images/foto2.jpg"
-                    alt="images Tom Ford"
-                    width="270"
-                  />
-                </a>
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
-              </li>
-              <li>
-                <a href="">
-                  <img
-                    src="images/foto3.jpg"
-                    alt="images Camila Garcia "
-                    width="270"
-                  />
-                </a>
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
-              </li>
-              <li>
-                <a href="">
-                  <img
-                    src="images/foto4.jpg"
-                    alt="images Daniel Wilson"
-                    width="270"
-                  />
-                </a>
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
-              </li>
-            </ul>
-          </section>
-        </div>
+
+  <header>
+    <!-- Navigation -->
+    <nav class="header-navigation">
+      <!-- Logo -->
+      <a href="./index.html" class="logo link"> Web<span class="logo-accent">Studio</span> </a>
+
+      <ul class="list">
+        <li class="header-menu-item">
+          <a class="header-menu-link link" href="./index.html">Studio </a>
+        </li>
+        <li class="header-menu-item">
+          <a class="header-menu-link link" href="./portfolio.html">Portfolio </a>
+        </li>
+        <li class="header-menu-item">
+          <a class="header-menu-link link" href="">Contacts </a>
+        </li>
+      </ul>
+    </nav>
+
+    <address class="header-contacts list">
+      <ul class="list">
+        <li class="header-contacts-item">
+          <a class="header-contacts-link link" href="mailto:info@devstudio.com"> info@devstudio.com </a>
+        </li>
+        <li class="header-contacts-item ">
+          <a class="header-contacts-link link" href="tel:+110001111111"> +11 (000) 111-11-11 </a>
+        </li>
+      </ul>
+
+    </address>
+  </header>
+
+
+  <main>
+    <!-- Title -->
+    <section class="hero">
+      <h1 class="hero-title">Effective Solutions for Your Business</h1>
+      <button class="hero-button" type="button">Order Service</button>
+    </section>
+
+    <!-- Section-1 -->
+    <section class="features">
+      <h2 class="visually-hidden">Features</h2>
+      <ul class="list">
+        <li class="features-item">
+          <h3 class="features-item-title">Strategy</h3>
+          <p class="features-item-text">
+            Our goal is to identify the business
+            problem to walk away with the perfect and creative solution.
+          </p>
+        </li>
+
+        <li class="features-item">
+          <h3 class="features-item-title">Punctuality</h3>
+          <p class="features-item-text">
+            Bring the key message to the brand's audience for the best price within the shortest possible
+            time.
+          </p>
+
+        </li>
+
+        <li class="features-item">
+          <h3 class="features-item-title">Diligence</h3>
+          <p class="features-item-text">
+            Research and confirm brands that present the strongest digital growth opportunities and minimize
+            risk.
+          </p>
+        </li>
+
+        <li class="features-item">
+          <h3 class="features-item-title">Technologies</h3>
+          <p class="features-item-text">
+            Design practice focused on digital experiences. We bring forth a deep passion for
+            problem-solving.
+          </p>
+        </li>
+
+      </ul>
+
+    </section>
+
+    <!-- Section-2 -->
+    <section class="projects">
+      <h2 class="projects-title"> What are we doing </h2>
+      <ul class="list">
+        <li class="projects-item">
+          <img src="./images/works-process1.jpg" alt="computer-screen" width="360" height="300">
+        </li>
+        <li class="projects-item">
+          <img src="./images/works-process2.jpg" alt="whats-app" width="360" height="300">
+        </li>
+        <li class="projects-item">
+          <img src="./images/works-process3.jpg" alt="phone-in-hand" width="360" height="300">
+        </li>
+      </ul>
+    </section>
+
+    <!-- Section-3 -->
+    <section class="team">
+      <h2 class="team-title">Our Team</h2>
+      <ul class="list">
+        <li class="team-item">
+          <img src="./images/foto1.jpg" alt="mark-guerrero" width="264" height="260">
+          <h3 class="team-item-title">Mark Guerrero</h3>
+          <p class="team-item-text">Product Designer</p>
+        </li>
+
+        <li class="team-item">
+          <img src="./images/foto2.jpg" alt="tom-ford" width="264" height="260">
+          <h3 class="team-item-title">Tom Ford</h3>
+          <p class="team-item-text">Frontend Developer</p>
+        </li>
+
+        <li class="team-item">
+          <img src="./images/foto3.jpg" alt="camila-garcia" width="264" height="260">
+          <h3 class="team-item-title">Camila Garcia</h3>
+          <p class="team-item-text">Marketing</p>
+        </li>
+
+        <li class="team-item">
+          <img src="./images/foto4.jpg" alt="daniel-wilson" width="264" height="260">
+          <h3 class="team-item-title">Daniel Wilson</h3>
+          <p class="team-item-text">UI Designer</p>
+        </li>
+      </ul>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <!-- Logo -->
+    <a class="footer-logo link" href="./index.html">Web <span class="footer-logo-accent">Studio</span> </a>
+
+    <p class="footer-text">
+      Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+    </p>
+  </footer>
+
 </body>
+
 </html>
