--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <main>
     <!-- Title -->
-    <section class="hero">
+    <section class="hero-conteine">
       <h1 class="hero-title">Effective Solutions for Your Business</h1>
       <button class="hero-button" type="button">Order Service</button>
     </section>
