--- a/portfolio.html
+++ b/portfolio.html
@@ -3,147 +3,144 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio </title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="modern-normalize" href="https://github.com/sindresorhus/modern-normalize">
-    <link rel="stylesheet" href="./css/styles.css">
+
 </head>
 
 <body>
-    <header>
-        <div class="conteiner header-conteiner">
-            <!-- Navigation -->
-            <nav class="header-navigation ">
-                <!-- Logo -->
-                <a href="./index.html" class="logo link"> Web<span class="logo-accent">Studio</span> </a>
-
-                <ul class="header-menu list">
-                    <li class="header-menu-item">
-                        <a class="header-menu-link link" href="./index.html">Studio </a>
-                    </li>
-                    <li class="header-menu-item">
-                        <a class="header-menu-link link" href="./portfolio.html">Portfolio </a>
-                    </li>
-                    <li class="header-menu-item">
-                        <a class="header-menu-link link" href="">Contacts </a>
-                    </li>
-                </ul>
-            </nav>
-
-            <address class="header-contacts list">
-                <ul class="list header-contacts-list">
-                    <li class="header-contacts-item">
-                        <a class="header-contacts-link link" href="mailto:info@devstudio.com"> info@devstudio.com </a>
-                    </li>
-                    <li class="header-contacts-item ">
-                        <a class="header-contacts-link link" href="tel:+110001111111"> +11 (000) 111-11-11 </a>
-                    </li>
-                </ul>
-
-            </address>
-        </div>
+    <header class="header">
+        <nav class="header-navigation">
+            <a href="./index.html" class="header-logo link">WEB<span class="header-logo-accent">Studio</span></a>
+            <ul class="header-menu list">
+                <li class="header-menu-item"><a href="./index.html" class="header-menu-link link">Studio</a></li>
+                <li class="header-menu-item"><a href="./portfolio.html" class="header-menu-link link">Portfolio</a></li>
+                <li class="header-menu-item"><a href="" class="header-menu-link link">Contacts</a></li>
+            </ul>
+        </nav>
+        <address class="header-address">
+            <ul class="header-address-list list">
+                <li class="header-address-list-item"><a href="mailto:info@devstudio.com"
+                        class="header-address-link link">info@devstudio.com</a></li>
+                <li class="header-address-list-item"><a href="tel:+110001111111" class="header-address-link link">+11
+                        (000) 111-11-11</a></li>
+            </ul>
+        </address>
     </header>
-
-
-    <main class="main">
-        <!-- Menu Buttons -->
-        <section class="main-menu">
-            <h1> Menu</h1>
-            <ul class="list">
-                <li class="button-item"><button type="button" class="button">All</button></li>
-                <li class="button-item"><button type="button" class="button">Web Site</button></li>
-                <li class="button-item"><button type="button" class="button">App</button></li>
-                <li class="button-item"><button type="button" class="button">Design</button></li>
-                <li class="button-item"><button type="button" class="button">Marketing</button></li>
+    <main>
+        <section class="portfolio">
+            <h1 hidden>Buttons and options</h1>
+            <ul class="portfolio-filters-list list">
+                <li class="portfolio-filters-item"><button type="button" class="portfolio-filters-btn">All</button></li>
+                <li class="portfolio-filters-item" id="website"><button type="button" class="portfolio-filters-btn">Web
+                        Site</button></li>
+                <li class="portfolio-filters-item" id="app"><button type="button"
+                        class="portfolio-filters-btn">App</button></li>
+                <li class="portfolio-filters-item" id="design"><button type="button"
+                        class="portfolio-filters-btn">Design</button></li>
+                <li class="portfolio-filters-item" id="marketing"><button type="button"
+                        class="portfolio-filters-btn">Marketing</button></li>
             </ul>
 
-            <ul class="list">
-                <li class="content-items">
-                    <a href="" class="link">
-                        <img class="content-item-image " src="./images/banking-app.jpeg" alt="banking-app" width="360">
-                        <h2 class="content-item-title">Banking App Interface Concept</h2>
-                        <p class="content-item-text">App</p>
+            <ul class="portfolio-projects-list list">
+                <li class="projects-item">
+                    <a href="#app" class="link">
+                        <img src="./images/interface.jpg" alt="Interface concept" width="360" height="300">
+                        <h2 class="projects-name">Banking App Interface Concept</h2>
+                        <p class="projects-filters">App</p>
                     </a>
+
                 </li>
-                <li class="content-items">
-                    <a href="" class="link">
-                        <img class="content-item-image " src="./images/cashless-payment.jpg" alt="cashless-payment"
-                            width="360">
-                        <h2 class="content-item-title">Cashless Payment</h2>
-                        <p class="content-item-text">Marketing</p>
+
+                <li class="projects-item">
+                    <a href="#marketing" class="link">
+                        <img src="./images/payment.jpg" alt="Payment" width="360" height="300">
+                        <h2 class="projects-name">Cashless Payment</h2>
+                        <p class="projects-filters">Marketing</p>
                     </a>
+
                 </li>
-                <li class="content-items">
-                    <a href="" class="link">
-                        <img class="content-item-image" src="./images/meditation-app.jpg" alt="meditation-app"
-                            width="360">
-                        <h2 class="content-item-title">Meditation App</h2>
-                        <p class="content-item-text">App</p>
+
+                <li class="projects-item">
+                    <a href="#app" class="link">
+                        <img src="./images/meditation.jpg" alt="Meditation" width="360" height="300">
+                        <h2 class="projects-name">Meditation App</h2>
+                        <p class="projects-filters">App</p>
                     </a>
+
                 </li>
-                <li class="content-items">
-                    <a href="" class="link">
-                        <img class="content-item-image" src="./images/taxi-service.jpg" alt="taxi-service" width="360">
-                        <h2 class="content-item-title">Taxi Service</h2>
-                        <p class="content-item-text">Marketing</p>
+
+                <li class="projects-item">
+                    <a href="#marketing" class="link">
+                        <img src="./images/taxi.jpg" alt="Taxi" width="360" height="300">
+                        <h2 class="projects-name">Taxi Service</h2>
+                        <p class="projects-filters">Marketing</p>
                     </a>
+
                 </li>
-                <li class="content-items">
-                    <a href="" class="link">
-                        <img class="content-item-image" src="./images/screen-illustrations.jpg"
-                            alt="screen-illustarions" width="360">
-                        <h2 class="content-item-title">Screen Illustrations</h2>
-                        <p class="content-item-text">Design</p>
+
+                <li class="projects-item">
+                    <a href="#design" class="link">
+                        <img src="./images/screen.jpg" alt="Screen" width="360" height="300">
+                        <h2 class="projects-name">Screen Illustrations</h2>
+                        <p class="projects-filters">Design</p>
                     </a>
+
                 </li>
-                <li class="content-items">
-                    <a href="" class="link">
-                        <img class="content-item-image" src="./images/online-courses.jpg" alt="online-courses"
-                            width="360">
-                        <h2 class="content-item-title">Online Courses</h2>
-                        <p class="content-item-text">Marketing</p>
+
+                <li class="projects-item">
+                    <a href="#marketing" class="link">
+                        <img src="./images/courses.jpg" alt="Courses" width="360" height="300">
+                        <h2 class="projects-name">Online Courses</h2>
+                        <p class="projects-filters">Marketing</p>
                     </a>
+
                 </li>
-                <li class="content-items">
-                    <a href="" class="link">
-                        <img class="content-item-image" src="./images/instsagram-stories.jpg"
-                            alt="instagram-stories-concept" width="360">
-                        <h2 class="content-item-title">Instagram Stories Concept</h2>
-                        <p class="content-item-text">Design</p>
+
+                <li class="projects-item">
+                    <a href="#design" class="link">
+                        <img src="./images/stories.jpg" alt="Stories concept" width="360" height="300">
+                        <h2 class="projects-name">Instagram Stories Concept</h2>
+                        <p class="projects-filters">Design</p>
                     </a>
+
                 </li>
-                <li class="content-items">
-                    <a href="" class="link">
-                        <img class="content-item-image" src="./images/orgamic-food.jpg" alt="organic-food" width="360">
-                        <h2 class="content-item-title">Organic Food</h2>
-                        <p class="content-item-text">Web Site</p>
+
+                <li class="projects-item">
+                    <a href="#website" class="link">
+                        <img src="./images/food.jpg" alt="Food" width="360" height="300">
+                        <h2 class="projects-name">Organic Food</h2>
+                        <p class="projects-filters">Web Site</p>
                     </a>
+
                 </li>
-                <li class="content-items">
-                    <a href="" class="link">
-                        <img class="content-item-image" src="./images/fresh-coffee.jpg" alt="fresh-coffee" width="360">
-                        <h2 class="content-item-title">Fresh Coffee</h2>
-                        <p class="content-item-text">Web Site</p>
+
+                <li class="projects-item">
+                    <a href="#website" class="link">
+                        <img src="./images/coffee.jpg" alt="Coffee" width="360" height="300">
+                        <h2 class="projects-name">Fresh Coffee</h2>
+                        <p class="projects-filters">Web Site</p>
                     </a>
+
                 </li>
             </ul>
+
+
 
         </section>
-
     </main>
 
     <footer class="footer">
-        <!-- Logo -->
-        <a class="footer-logo link" href="./index.html">Web <span class="footer-logo-accent">Studio</span> </a>
-
-        <p class="footer-text">
-            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-        </p>
+        <a href="./index.html" class="footer-logo link">WEB<span class="footer-logo-accent">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+            growth
+            solutions.</p>
     </footer>
 </body>
 
